Fix spacing for sub menu

--- a/src/components/ProfileMenu/ProfileMenu.css
+++ b/src/components/ProfileMenu/ProfileMenu.css
@@ -67,7 +67,7 @@
 }
 
 .submenu p, .submenu div {
-    margin: 0.25rem 0;
+    margin: 0.5rem 0;
     font-size: 0.9rem;
 }
 
